[package]
name = "telepy-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lexer-first Python hierarchy parser for the telepy Neovim plugin"
rust-version = "1.75"

[dependencies]
anyhow = "1.0.100"
flate2 = "1.1.4"
ignore = "0.4.25"
memchr = "2.7.6"
parking_lot = "0.12"
memmap2 = "0.9.9"
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustpython-parser = "0.4.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
